--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,25 +2,45 @@ name: Docker Image CI
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
     paths-ignore:
       - "README.md"
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
+  release:
+    types: [published]
+  
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: docker/login-action@v1
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Github Container Registry
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.ALIST_GITHUB_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build the  Docker image
-        run:
-          |
-          docker build . --file Dockerfile --tag ghcr.io/z-mio/alist-bot:latest 
-          docker push ghcr.io/z-mio/alist-bot:latest 
+      - name: Generate Tags
+        uses: docker/metadata-action@v5
+        id: metadata
+        with:
+          images: ghcr.io/AkashiCoin/Alist-bot
+          tags: |
+            type=semver,pattern={{version}}
+            type=ref,event=branch
+
+      - name: Build and Publish
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
