--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,36 @@
-PyYAML~=6.0.1
-APScheduler~=3.10.1
-croniter~=2.0.1
-Pyrogram~=2.0.106
-TgCrypto
-loguru~=0.7.2
-httpx~=0.25.1
-uvicorn~=0.27.0.post1
-fastapi~=0.109.0
-starlette~=0.35.1
-cloudflare~=3.1.0
-prettytable
+aiocache==0.12.2
+annotated-types==0.7.0
+anyio==4.4.0
+APScheduler==3.10.4
+certifi==2024.8.30
+click==8.1.7
+cloudflare==3.1.0
+colorama==0.4.6
+croniter==2.0.7
+distro==1.9.0
+exceptiongroup==1.2.2
+fastapi==0.109.1
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.25.2
+idna==3.8
+loguru==0.7.2
+prettytable==3.11.0
+pyaes==1.6.1
+pydantic==2.9.0
+pydantic_core==2.23.2
+Pyrogram==2.0.106
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.2
+six==1.16.0
+sniffio==1.3.1
+starlette==0.35.1
+TgCrypto==1.2.5
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
+uvicorn==0.27.1
+wcwidth==0.2.13
+win32-setctime==1.1.0
